fix: delete overflow-anchor: none;in schedule-section

--- a/style.css
+++ b/style.css
@@ -285,8 +285,7 @@ p {                               /* Styles for paragraph elements */
 /* Main schedule section in index.html*/
 .schedule-section {
   max-width: 900px;
-  margin: 0 auto;
-  overflow-anchor: none;
+  margin: 0 auto
 }
 
 /* 'Horarios' header*/
